--- a/about.html
+++ b/about.html
@@ -1,28 +1,30 @@
 <!DOCTYPE html>
 <html lang="fr">
+
 <head>
-<meta charset="utf-8">
-<meta http-equiv="X-UA-Compatible" content="IE=edge">
-<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
 
-<title>PLC Lab - À propos de notre entreprise de développement</title>
+    <title>PLC Lab - À propos de notre entreprise de développement</title>
 
-<!-- Fav Icon -->
-<link rel="icon" href="images/favicon.ico" type="image/x-icon">
+    <!-- Fav Icon -->
+    <link rel="icon" href="images/favicon.ico" type="image/x-icon">
 
-<!-- Google Fonts -->
-<link href="https://fonts.googleapis.com/css?family=Ubuntu:300,300i,400,400i,500,500i,700,700i&display=swap" rel="stylesheet">
+    <!-- Google Fonts -->
+    <link href="https://fonts.googleapis.com/css?family=Ubuntu:300,300i,400,400i,500,500i,700,700i&display=swap"
+        rel="stylesheet">
 
-<!-- Stylesheets -->
-<link href="css/font-awesome-all.css" rel="stylesheet">
-<link href="css/flaticon.css" rel="stylesheet">
-<link href="css/owl.css" rel="stylesheet">
-<link href="css/bootstrap.css" rel="stylesheet">
-<link href="css/jquery.fancybox.min.css" rel="stylesheet">
-<link href="css/animate.css" rel="stylesheet">
-<link href="css/imagebg.css" rel="stylesheet">
-<link href="css/style.css" rel="stylesheet">
-<link href="css/responsive.css" rel="stylesheet">
+    <!-- Stylesheets -->
+    <link href="css/font-awesome-all.css" rel="stylesheet">
+    <link href="css/flaticon.css" rel="stylesheet">
+    <link href="css/owl.css" rel="stylesheet">
+    <link href="css/bootstrap.css" rel="stylesheet">
+    <link href="css/jquery.fancybox.min.css" rel="stylesheet">
+    <link href="css/animate.css" rel="stylesheet">
+    <link href="css/imagebg.css" rel="stylesheet">
+    <link href="css/style.css" rel="stylesheet">
+    <link href="css/responsive.css" rel="stylesheet">
 
 </head>
 
@@ -38,7 +40,9 @@
             <div class="container">
                 <div class="main-box clearfix">
                     <div class="logo-box pull-left py-5">
-                        <a href="#" class="logo py-3"><h2>PLC <span class="">Lab</span></h2> </a>
+                        <a href="#" class="logo py-3">
+                            <h2>PLC <span class="">Lab</span></h2>
+                        </a>
                     </div>
                     <div class="menu-area pull-right clearfix">
                         <!--Mobile Navigation Toggler-->
@@ -50,7 +54,7 @@
                         <nav class="main-menu navbar-expand-md navbar-light">
                             <div class="collapse navbar-collapse show clearfix" id="navbarSupportedContent">
                                 <ul class="navigation clearfix">
-                                    <li class=" dropdown"><a href="index.html">Accueil</a></li> 
+                                    <li class=" dropdown"><a href="index.html">Accueil</a></li>
                                     <li class=""><a href="service.html">Services</a>
                                         <!-- <ul>
                                             <li><a href="developpement-web.html">Développement Web</a></li>
@@ -60,7 +64,7 @@
                                         </ul> -->
                                     </li>
                                     <li class="current"><a href="about.html">À propos</a>
-                                      
+
                                     </li>
                                     <li class=""><a href="portfolio.html">Portfolio</a>
                                         <!-- <ul>
@@ -69,7 +73,7 @@
                                             <li><a href="etudes-cas.html">Études de Cas</a></li>
                                         </ul> -->
                                     </li>
-                                    <li><a href="blog.html">Blog</a></li>                              
+                                    <li><a href="blog.html">Blog</a></li>
                                     <li><a href="contact.html">Contact</a></li>
                                 </ul>
                             </div>
@@ -84,8 +88,8 @@
         <div class="sticky-header">
             <div class="container clearfix">
                 <figure class="logo-box"><a href="index.html">
-                    PLC Lab
-                </a></figure>
+                        PLC Lab
+                    </a></figure>
                 <div class="menu-area">
                     <nav class="main-menu clearfix">
                         <!--Keep This Empty / Menu will come through Javascript-->
@@ -100,22 +104,26 @@
     <div class="mobile-menu">
         <div class="menu-backdrop"></div>
         <div class="close-btn"><i class="fas fa-times"></i></div>
-        
+
         <nav class="menu-box">
-            <div class="nav-logo"><a href="index.html"><img src="images/logo.png" alt="PLC Lab" title="PLC Lab"></a></div>
-            <div class="menu-outer"><!--Here Menu Will Come Automatically Via Javascript / Same Menu as in Header--></div>
+            <div class="nav-logo"><a href="index.html"><img src="images/logo.png" alt="PLC Lab" title="PLC Lab"></a>
+            </div>
+            <div class="menu-outer"><!--Here Menu Will Come Automatically Via Javascript / Same Menu as in Header-->
+            </div>
             <div class="contact-info">
                 <h4>Coordonnées</h4>
                 <ul>
                     <li>Paris, France</li>
-                    <li><a href="tel:+33123456789">+33 1 23 45 67 89</a></li>
-                    <li><a href="mailto:contact@plclab.fr">contact@plclab.fr</a></li>
+                    <li><a href="tel:+25761103320">+257 61 10 33 20</a></li>
+                    <li><a href="mailto:plccreativeroom7@gmail.com">contact@plclab.fr</a></li>
                 </ul>
             </div>
             <div class="social-links">
                 <ul class="clearfix">
-                    <li><a href="https://www.facebook.com/share/1CvNBoBngA/" target="_blank"><span class="fab fa-facebook-square"></span></a></li>
-                    <li><a href="https://x.com/PLCLab?t=trNAovDs5Yrij0sd4lMjrw&s=08" target="_blank"><span class="fab fa-twitter"></span></a></li>
+                    <li><a href="https://www.facebook.com/share/1CvNBoBngA/" target="_blank"><span
+                                class="fab fa-facebook-square"></span></a></li>
+                    <li><a href="https://x.com/PLCLab?t=trNAovDs5Yrij0sd4lMjrw&s=08" target="_blank"><span
+                                class="fab fa-twitter"></span></a></li>
                     <li><a href="#"><span class="fab fa-linkedin-in"></span></a></li>
                     <li><a href="#"><span class="fab fa-github"></span></a></li>
                 </ul>
@@ -153,20 +161,30 @@
                 <div class="col-lg-6 col-md-12 col-sm-12 content-column">
                     <div id="content_block_53">
                         <div class="content-box wow fadeInLeft" data-wow-delay="00ms" data-wow-duration="1500ms">
-                            <div class="sec-title"><h2>Notre Histoire</h2></div>
+                            <div class="sec-title">
+                                <h2>Notre Histoire</h2>
+                            </div>
                             <div class="text">
-                                <p>Depuis notre création, PLC Lab n'a cessé d'évoluer dans tous les aspects - et continue de le faire chaque jour - mais nos objectifs sont restés les mêmes. Allier passion et expertise technique pour créer les meilleures solutions digitales. Concevoir et développer les produits les plus innovants. Nous mesurer aux meilleurs du secteur.</p>
-                                <p>Notre philosophie : se concentrer sur l'essentiel. Cultiver l'ouverture et le respect dans toutes les communications. Travailler en équipe soudée. Apprendre constamment. Partager nos connaissances.</p>
+                                <p>Depuis notre création, PLC Lab n'a cessé d'évoluer dans tous les aspects - et
+                                    continue de le faire chaque jour - mais nos objectifs sont restés les mêmes. Allier
+                                    passion et expertise technique pour créer les meilleures solutions digitales.
+                                    Concevoir et développer les produits les plus innovants. Nous mesurer aux meilleurs
+                                    du secteur.</p>
+                                <p>Notre philosophie : se concentrer sur l'essentiel. Cultiver l'ouverture et le respect
+                                    dans toutes les communications. Travailler en équipe soudée. Apprendre constamment.
+                                    Partager nos connaissances.</p>
                             </div>
                             <h5>L'équipe fondatrice, PLC Lab.</h5>
-                            <figure class="signatur"><img src="images/icons/signatur.png" alt="Signature PLC Lab"></figure>
+                            <figure class="signatur"><img src="images/icons/signatur.png" alt="Signature PLC Lab">
+                            </figure>
                         </div>
                     </div>
                 </div>
                 <div class="col-lg-6 col-md-12 col-sm-12 image-column">
                     <div id="image_block_47">
                         <div class="image-box js-tilt">
-                            <figure class="image wow slideInRight" data-wow-delay="00ms" data-wow-duration="1500ms"><img src="images/resource/illustration-41.png" alt="Histoire PLC Lab"></figure>
+                            <figure class="image wow slideInRight" data-wow-delay="00ms" data-wow-duration="1500ms"><img
+                                    src="images/resource/illustration-41.png" alt="Histoire PLC Lab"></figure>
                         </div>
                     </div>
                 </div>
@@ -182,7 +200,8 @@
             <div class="row">
                 <div class="col-lg-6 col-md-12 col-sm-12 video-column">
                     <div class="video-inner">
-                        <a href="https://www.youtube.com/watch?v=nfP5N9Yc72A&amp;t=28s" class="lightbox-image" data-caption="">
+                        <a href="https://www.youtube.com/watch?v=nfP5N9Yc72A&amp;t=28s" class="lightbox-image"
+                            data-caption="">
                             <i class="flaticon-play-button"></i>
                             <span class="ripple"></span>
                         </a>
@@ -191,8 +210,12 @@
                 <div class="col-lg-6 col-md-12 col-sm-12 content-column">
                     <div id="content_block_04">
                         <div class="content-box">
-                            <div class="sec-title"><h2>Découvrez PLC Lab en vidéo</h2></div>
-                            <div class="text">Plongez au cœur de notre univers et découvrez comment nous transformons les idées en solutions digitales performantes. Notre approche unique allie créativité et expertise technique pour des résultats exceptionnels.</div>
+                            <div class="sec-title">
+                                <h2>Découvrez PLC Lab en vidéo</h2>
+                            </div>
+                            <div class="text">Plongez au cœur de notre univers et découvrez comment nous transformons
+                                les idées en solutions digitales performantes. Notre approche unique allie créativité et
+                                expertise technique pour des résultats exceptionnels.</div>
                             <div class="btn-box"><a href="#" class="theme-btn-two">Voir la vidéo</a></div>
                         </div>
                     </div>
@@ -212,7 +235,8 @@
         <div class="container">
             <div class="sec-title center">
                 <h2>Quelques chiffres clés</h2>
-                <p>Notre engagement se traduit par des résultats concrets et une croissance constante<br />au service de l'excellence digitale.</p>
+                <p>Notre engagement se traduit par des résultats concrets et une croissance constante<br />au service de
+                    l'excellence digitale.</p>
             </div>
             <div class="row">
                 <div class="col-lg-3 col-md-6 col-sm-12 counter-block">
@@ -264,15 +288,19 @@
                     <div id="image_block_38">
                         <div class="image-box">
                             <div class="bg-layer" style="background-image: url(images/icons/user-icon.png);"></div>
-                            <figure class="image float-bob-y clearfix"><img src="images/resource/user-16.png" alt="Newsletter PLC Lab"></figure>
+                            <figure class="image float-bob-y clearfix"><img src="images/resource/user-16.png"
+                                    alt="Newsletter PLC Lab"></figure>
                         </div>
                     </div>
                 </div>
                 <div class="col-lg-6 col-md-12 col-sm-12 content-column">
                     <div id="content_block_41">
                         <div class="content-box">
-                            <div class="sec-title"><h2>Restez informé</h2></div>
-                            <div class="text">Abonnez-vous à notre newsletter pour recevoir nos actualités, conseils en développement et offres exclusives.</div>
+                            <div class="sec-title">
+                                <h2>Restez informé</h2>
+                            </div>
+                            <div class="text">Abonnez-vous à notre newsletter pour recevoir nos actualités, conseils en
+                                développement et offres exclusives.</div>
                             <form action="#" method="post" class="subscribe-form">
                                 <div class="form-group">
                                     <input type="email" name="email" placeholder="Votre adresse email" required="">
@@ -322,14 +350,20 @@
                         <div class="col-lg-4 col-md-6 col-sm-12 footer-column">
                             <div class="about-widget footer-widget">
                                 <figure class="footer-logo"><a href="index.html">
-                                    <!-- <img src="images/footer-logo-2.png" alt="PLC Lab"> -->
-                                     <h2 style="font-size: 3rem;">PLC <span class="text-warning">Lab</span></h2>
-                                </a></figure>
-                                <div class="text">PLC Lab est une startup innovante spécialisée dans le développement de solutions logicielles sur mesure. Nous transformons vos idées en réalité numérique grâce à notre expertise technique et notre approche collaborative.</div>
+                                        <!-- <img src="images/footer-logo-2.png" alt="PLC Lab"> -->
+                                        <h2 style="font-size: 3rem;">PLC <span class="text-warning">Lab</span></h2>
+                                    </a></figure>
+                                <div class="text">PLC Lab est une startup innovante spécialisée dans le développement de
+                                    solutions logicielles sur mesure. Nous transformons vos idées en réalité numérique
+                                    grâce à notre expertise technique et notre approche collaborative.</div>
                                 <ul class="social-links">
-                                    <li><h6>Suivez-nous :</h6></li>
-                                    <li><a href="https://www.facebook.com/share/1CvNBoBngA/" target="_blank"><i class="fab fa-facebook-f"></i></a></li>
-                                    <li><a href="https://x.com/PLCLab?t=trNAovDs5Yrij0sd4lMjrw&s=08" target="_blank"><i class="fab fa-twitter"></i></a></li>
+                                    <li>
+                                        <h6>Suivez-nous :</h6>
+                                    </li>
+                                    <li><a href="https://www.facebook.com/share/1CvNBoBngA/" target="_blank"><i
+                                                class="fab fa-facebook-f"></i></a></li>
+                                    <li><a href="https://x.com/PLCLab?t=trNAovDs5Yrij0sd4lMjrw&s=08" target="_blank"><i
+                                                class="fab fa-twitter"></i></a></li>
                                     <!--<li><a href="#"><i class="fab fa-linkedin-in"></i></a></li>
                                     <li><a href="#"><i class="fab fa-github"></i></a></li> -->
                                 </ul>
@@ -422,4 +456,5 @@
     <script src="js/script.js"></script>
 
 </body>
+
 </html>
