--- a/contact.html
+++ b/contact.html
@@ -1,32 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-<meta charset="utf-8">
-<meta http-equiv="X-UA-Compatible" content="IE=edge">
-<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
 
-<title>Appway - HTML 5 Template Preview</title>
+    <title>Appway - HTML 5 Template Preview</title>
 
-<!-- Fav Icon -->
-<link rel="icon" href="images/favicon.ico" type="image/x-icon">
+    <!-- Fav Icon -->
+    <link rel="icon" href="images/favicon.ico" type="image/x-icon">
 
-<!-- Google Fonts -->
-<link href="https://fonts.googleapis.com/css?family=Ubuntu:300,300i,400,400i,500,500i,700,700i&display=swap" rel="stylesheet">
+    <!-- Google Fonts -->
+    <link href="https://fonts.googleapis.com/css?family=Ubuntu:300,300i,400,400i,500,500i,700,700i&display=swap"
+        rel="stylesheet">
 
-<!-- Stylesheets -->
-<link href="css/font-awesome-all.css" rel="stylesheet">
-<link href="css/flaticon.css" rel="stylesheet">
-<link href="css/owl.css" rel="stylesheet">
-<link href="css/bootstrap.css" rel="stylesheet">
-<link href="css/jquery.fancybox.min.css" rel="stylesheet">
-<link href="css/animate.css" rel="stylesheet">
-<link href="css/style.css" rel="stylesheet">
-<link href="css/responsive.css" rel="stylesheet">
+    <!-- Stylesheets -->
+    <link href="css/font-awesome-all.css" rel="stylesheet">
+    <link href="css/flaticon.css" rel="stylesheet">
+    <link href="css/owl.css" rel="stylesheet">
+    <link href="css/bootstrap.css" rel="stylesheet">
+    <link href="css/jquery.fancybox.min.css" rel="stylesheet">
+    <link href="css/animate.css" rel="stylesheet">
+    <link href="css/style.css" rel="stylesheet">
+    <link href="css/responsive.css" rel="stylesheet">
 
 </head>
 
 
 <!-- page wrapper -->
+
 <body class="boxed_wrapper">
 
     <!-- preloader -->
@@ -39,7 +42,9 @@
             <div class="container">
                 <div class="main-box clearfix">
                     <div class="logo-box pull-left py-5">
-                        <a href="#" class="logo py-3"><h2>PLC <span class="">Lab</span></h2> </a>
+                        <a href="#" class="logo py-3">
+                            <h2>PLC <span class="">Lab</span></h2>
+                        </a>
                     </div>
                     <div class="menu-area pull-right clearfix">
                         <!--Mobile Navigation Toggler-->
@@ -51,7 +56,7 @@
                         <nav class="main-menu navbar-expand-md navbar-light">
                             <div class="collapse navbar-collapse show clearfix" id="navbarSupportedContent">
                                 <ul class="navigation clearfix">
-                                    <li class=" dropdown"><a href="index.html">Accueil</a></li> 
+                                    <li class=" dropdown"><a href="index.html">Accueil</a></li>
                                     <li class=""><a href="service.html">Services</a>
                                         <!-- <ul>
                                             <li><a href="developpement-web.html">Développement Web</a></li>
@@ -74,7 +79,7 @@
                                             <li><a href="etudes-cas.html">Études de Cas</a></li>
                                         </ul> -->
                                     </li>
-                                    <li><a href="blog.html">Blog</a></li>                              
+                                    <li><a href="blog.html">Blog</a></li>
                                     <li class="current"><a href="contact.html">Contact</a></li>
                                 </ul>
                             </div>
@@ -89,8 +94,8 @@
         <div class="sticky-header">
             <div class="container clearfix">
                 <figure class="logo-box"><a href="index.html">
-                    PLC Lab
-                </a></figure>
+                        PLC Lab
+                    </a></figure>
                 <div class="menu-area">
                     <nav class="main-menu clearfix">
                         <!--Keep This Empty / Menu will come through Javascript-->
@@ -105,14 +110,15 @@
     <div class="mobile-menu">
         <div class="menu-backdrop"></div>
         <div class="close-btn"><i class="fas fa-times"></i></div>
-        
+
         <nav class="menu-box">
             <div class="nav-logo"><a href="index.html"><img src="images/logo.png" alt="" title=""></a></div>
-            <div class="menu-outer"><!--Here Menu Will Come Automatically Via Javascript / Same Menu as in Header--></div>
+            <div class="menu-outer"><!--Here Menu Will Come Automatically Via Javascript / Same Menu as in Header-->
+            </div>
             <div class="contact-info">
                 <h4>Contact Info</h4>
                 <ul>
-                    <li>Chicago 12, Melborne City, USA</li>
+                    <li>Bujumbura, Burundi</li>
                     <li><a href="tel:+8801682648101">+88 01682648101</a></li>
                     <li><a href="mailto:info@example.com">info@example.com</a></li>
                 </ul>
@@ -165,24 +171,28 @@
                                 <div class="single-info-box">
                                     <figure class="icon-box"><img src="images/icons/info-icon-1.png" alt=""></figure>
                                     <h2>Phone</h2>
-                                    <div class="text">Start working with Landrick that can provide everything</div>
-                                    <div class="phone"><a href="tel:0665184575181">(+066) 518 - 457 - 5181</a></div>
+                                    <div class="text">Travailler en équipe soudée. Apprendre constamment. Partager nos
+                                        connaissances. </div>
+                                    <div class="phone"><a href="tel:+25761103320">+257 61 103 320</a></div>
                                 </div>
                             </div>
                             <div class="col-lg-4 col-md-6 col-sm-12 info-column">
                                 <div class="single-info-box">
                                     <figure class="icon-box"><img src="images/icons/info-icon-2.png" alt=""></figure>
                                     <h2>E-mail</h2>
-                                    <div class="text">Start working with Landrick that can provide everything</div>
-                                    <div class="phone"><a href="mailto:info@example.com">info@example.com</a></div>
+                                    <div class="text">Travailler en équipe soudée. Apprendre constamment. Partager nos
+                                        connaissances.</div>
+                                    <div class="phone"><a
+                                            href="mailto:plccreativeroom7@gmail.com">plccreativeroom7@gmail.com</a>
+                                    </div>
                                 </div>
                             </div>
                             <div class="col-lg-4 col-md-6 col-sm-12 info-column">
                                 <div class="single-info-box">
                                     <figure class="icon-box"><img src="images/icons/info-icon-3.png" alt=""></figure>
                                     <h2>Address</h2>
-                                    <div class="text">25 Bedford St. New York City. New Yark</div>
-                                    <div class="phone"><a href="#">View on Google map</a></div>
+                                    <div class="text">Bujumbura, Burundi</div>
+                                    <!-- <div class="phone"><a href="#">View on Google map</a></div> -->
                                 </div>
                             </div>
                         </div>
@@ -191,9 +201,11 @@
                         <figure class="image-box"><img src="images/resource/contact-1.png" alt=""></figure>
                     </div>
                     <div class="contact-form-area">
-                        <div class="sec-title center"><h2>Contact us</h2></div>
+                        <div class="sec-title center">
+                            <h2>Contact us</h2>
+                        </div>
                         <div class="form-inner">
-                            <form method="post" action="sendemail.php" id="contact-form" class="default-form"> 
+                            <form method="post" action="sendemail.php" id="contact-form" class="default-form">
                                 <div class="row">
                                     <div class="col-lg-6 col-md-12 col-sm-12 column">
                                         <div class="form-group">
@@ -226,7 +238,8 @@
                                     </div>
                                     <div class="col-lg-12 col-md-12 col-sm-12 column">
                                         <div class="form-group message-btn centred">
-                                            <button type="submit" class="theme-btn-two" name="submit-form">Submit Now</button>
+                                            <button type="submit" class="theme-btn-two" name="submit-form">Submit
+                                                Now</button>
                                         </div>
                                     </div>
                                 </div>
@@ -243,15 +256,9 @@
     <!-- map-section -->
     <section class="map-section">
         <div class="google-map-area">
-            <div 
-                class="google-map" 
-                id="contact-google-map" 
-                data-map-lat="40.712776" 
-                data-map-lng="-74.005974" 
-                data-icon-path="images/icons/map-marker.png"  
-                data-map-title="Brooklyn, New York, United Kingdom" 
-                data-map-zoom="12" 
-                data-markers='{
+            <div class="google-map" id="contact-google-map" data-map-lat="40.712776" data-map-lng="-74.005974"
+                data-icon-path="images/icons/map-marker.png" data-map-title="Brooklyn, New York, United Kingdom"
+                data-map-zoom="12" data-markers='{
                     "marker-1": [40.712776, -74.005974, "<h4>Branch Office</h4><p>77/99 New York</p>","images/icons/map-marker.png"]
                 }'>
 
@@ -282,14 +289,20 @@
                         <div class="col-lg-4 col-md-6 col-sm-12 footer-column">
                             <div class="about-widget footer-widget">
                                 <figure class="footer-logo"><a href="index.html">
-                                    <!-- <img src="images/footer-logo-2.png" alt="PLC Lab"> -->
-                                     <h2 style="font-size: 3rem;">PLC <span class="text-warning">Lab</span></h2>
-                                </a></figure>
-                                <div class="text">PLC Lab est une startup innovante spécialisée dans le développement de solutions logicielles sur mesure. Nous transformons vos idées en réalité numérique grâce à notre expertise technique et notre approche collaborative.</div>
+                                        <!-- <img src="images/footer-logo-2.png" alt="PLC Lab"> -->
+                                        <h2 style="font-size: 3rem;">PLC <span class="text-warning">Lab</span></h2>
+                                    </a></figure>
+                                <div class="text">PLC Lab est une startup innovante spécialisée dans le développement de
+                                    solutions logicielles sur mesure. Nous transformons vos idées en réalité numérique
+                                    grâce à notre expertise technique et notre approche collaborative.</div>
                                 <ul class="social-links">
-                                    <li><h6>Suivez-nous :</h6></li>
-                                    <li><a href="https://www.facebook.com/share/1CvNBoBngA/" target="_blank"><i class="fab fa-facebook-f"></i></a></li>
-                                    <li><a href="https://x.com/PLCLab?t=trNAovDs5Yrij0sd4lMjrw&s=08" target="_blank"><i class="fab fa-twitter"></i></a></li>
+                                    <li>
+                                        <h6>Suivez-nous :</h6>
+                                    </li>
+                                    <li><a href="https://www.facebook.com/share/1CvNBoBngA/" target="_blank"><i
+                                                class="fab fa-facebook-f"></i></a></li>
+                                    <li><a href="https://x.com/PLCLab?t=trNAovDs5Yrij0sd4lMjrw&s=08" target="_blank"><i
+                                                class="fab fa-twitter"></i></a></li>
                                     <!--<li><a href="#"><i class="fab fa-linkedin-in"></i></a></li>
                                     <li><a href="#"><i class="fab fa-github"></i></a></li> -->
                                 </ul>
@@ -358,35 +371,36 @@
     <!-- main-footer end -->
 
 
-<!--Scroll to top-->
-<button class="scroll-top scroll-to-target" data-target="html">
-    <span class="fa fa-arrow-up"></span>
-</button>
+    <!--Scroll to top-->
+    <button class="scroll-top scroll-to-target" data-target="html">
+        <span class="fa fa-arrow-up"></span>
+    </button>
 
 
-<!-- jequery plugins -->
-<script src="js/jquery.js"></script>
-<script src="js/popper.min.js"></script>
-<script src="js/bootstrap.min.js"></script>
-<script src="js/owl.js"></script>
-<script src="js/wow.js"></script>
-<script src="js/validation.js"></script>
-<script src="js/jquery.fancybox.js"></script>
-<script src="js/appear.js"></script>
-<script src="js/circle-progress.js"></script>
-<script src="js/jquery.countTo.js"></script>
-<script src="js/scrollbar.js"></script>
-<script src="js/nav-tool.js"></script>
-<script src="js/jquery.paroller.min.js"></script>
-<script src="js/tilt.jquery.js"></script>
+    <!-- jequery plugins -->
+    <script src="js/jquery.js"></script>
+    <script src="js/popper.min.js"></script>
+    <script src="js/bootstrap.min.js"></script>
+    <script src="js/owl.js"></script>
+    <script src="js/wow.js"></script>
+    <script src="js/validation.js"></script>
+    <script src="js/jquery.fancybox.js"></script>
+    <script src="js/appear.js"></script>
+    <script src="js/circle-progress.js"></script>
+    <script src="js/jquery.countTo.js"></script>
+    <script src="js/scrollbar.js"></script>
+    <script src="js/nav-tool.js"></script>
+    <script src="js/jquery.paroller.min.js"></script>
+    <script src="js/tilt.jquery.js"></script>
 
-<!-- map script -->
-<script src="http://maps.google.com/maps/api/js?key=AIzaSyATY4Rxc8jNvDpsK8ZetC7JyN4PFVYGCGM"></script>
-<script src="js/gmaps.js"></script>
-<script src="js/map-helper.js"></script>
+    <!-- map script -->
+    <script src="http://maps.google.com/maps/api/js?key=AIzaSyATY4Rxc8jNvDpsK8ZetC7JyN4PFVYGCGM"></script>
+    <script src="js/gmaps.js"></script>
+    <script src="js/map-helper.js"></script>
 
-<!-- main-js -->
-<script src="js/script.js"></script>
+    <!-- main-js -->
+    <script src="js/script.js"></script>
 
 </body><!-- End of .page_wrapper -->
+
 </html>
